# taskflow-frontend

./: .env.local  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  render.yaml  vite.config.ts
backend/: .gitignore  Dockerfile  Procfile  README.md  alembic.ini  build.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  vercel.json
backend/app/: __init__.py  database.py  health.py  main.py
backend/app/models/: __init__.py  base.py  comment.py  notification.py  project.py  task.py  user.py
backend/migrations/: env.py
backend/venv_new/: pyvenv.cfg
frontend/: railway.toml  tsconfig.node.json  vite.config.js
frontend/src/components/: TaskReview.tsx  WelcomeScreen.tsx
frontend/src/pages/: Index.tsx
src/components/: InboxScan.tsx  ModeSelector.tsx  TaskEditDialog.tsx
src/pages/: Index.tsx
