[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-backend"
version = "1.0.0"
description = "TaskFlow Backend API"
authors = [
    {name = "TaskFlow Team", email = "team@taskflow.com"}
]
readme = "README.md"
requires-python = ">=3.11.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.setuptools]
packages = ["app"]
package-data = {"app": ["py.typed"]}

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 